# carc-datahub-mcp

./: .gitignore  .mcpbignore  CHANGELOG.md  DEVELOPING.md  Dockerfile  manifest.json  pyproject.toml  run.py
.github/workflows/: docker.yml
src/mcp_server_datahub/: __main__.py  _telemetry.py  mcp_server.py
src/mcp_server_datahub/gql/: column_stats.gql
