[project]
name = "mcp-server-datahub"
version = "1.1.0"
description = "A Model Context Protocol (MCP) server for DataHub"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "acryl-datahub==1.2.0.2",
    "asyncer>=0.0.8",
    "cachetools>=5.0.0",
    "fastmcp==2.10.5",
    "jmespath~=1.0.1",
    "loguru",
    "pydantic>=2.0,<2.12",
]
license = "Apache-2.0"

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "types-cachetools",
    "types-jmespath~=1.0.1",
]

[project.urls]
"Source" = "https://github.com/acryldata/mcp-server-datahub"
"Documentation" = "https://docs.datahub.com/docs/features/feature-guides/mcp"

[project.scripts]
mcp-server-datahub = "mcp_server_datahub.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = []

[tool.mypy]
# Exclude shared tests that use datahub_integrations imports
# These work via conftest.py compatibility shim but mypy can't see it
exclude = [
    "^tests/test_mcp/",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

#[tool.uv.sources]
#acryl-datahub = { path = "../datahub/metadata-ingestion", editable = true }
